[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
diesel = { version = "2.2.12", features = ["postgres"] }
postgres = "0.19.10"
dotenvy = "0.15.7"
diesel_migrations = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.142"
reqwest = "0.12.22"
axum = "0.8.4"
